--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ body {
 .bar {
   width: 100%;
   height: 22px;
-  background: #222;
-  border-radius: 11px;
   overflow: hidden;
   margin-top: 6px;
+  border-radius: 10%;
 }
+
 
 .fill {
   height: 100%;
